// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Future collection normalizer normalizeCollection function add default values 1`] = `
Object {
  "description": "",
  "name": "",
}
`;

exports[`Future collection normalizer normalizeCollection function should remove extra properties 1`] = `
Object {
  "description": "",
  "name": "WeTransfer rocks",
}
`;

exports[`Future collection normalizer normalizeCollection function should return a normalized transfer 1`] = `
Object {
  "description": "",
  "name": "WeTransfer rocks",
}
`;
